--- a/source/cart.html
+++ b/source/cart.html
@@ -296,12 +296,6 @@
         <li>
           <button class="profile-buttons__item  js-active">Мои заказы</button>
         </li>
-        <li>
-          <button class="profile-buttons__item">Мой профиль</button>
-        </li>
-        <li>
-          <button class="profile-buttons__item">История заказов</button>
-        </li>
       </ul>
 
       <section class="cart__products  order-section">
@@ -331,9 +325,9 @@
                       <tr>
                         <td>Количество</td>
                         <td class="order-card__count-buttons">
-                          <button class="order-card__count-button" type="button"></button>
+                          <button class="order-card__count-button" type="button">-</button>
                           <input class="order-card__count-value" type="text" value="2" disabled>
-                          <button class="order-card__count-button" type="button"></button>
+                          <button class="order-card__count-button" type="button">+</button>
                         </td>
                       </tr>
                     </tbody>
@@ -371,9 +365,9 @@
                       <tr>
                         <td>Количество</td>
                         <td class="order-card__count-buttons">
-                          <button class="order-card__count-button" type="button"></button>
+                          <button class="order-card__count-button" type="button">-</button>
                           <input class="order-card__count-value" type="text" value="2" disabled>
-                          <button class="order-card__count-button" type="button"></button>
+                          <button class="order-card__count-button" type="button">+</button>
                         </td>
                       </tr>
                     </tbody>
@@ -922,13 +916,13 @@
           <form class="popup-auth__form  js-form-login  js-show">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="password" placeholder="Пароль*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Войти</button>
           </form>
 
           <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="number" placeholder="ИНН*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Регистрация</button>
           </form>
 
           <p class="popup-auth__hint">Для юридических лиц*</p>
