--- a/source/choose-color.html
+++ b/source/choose-color.html
@@ -410,7 +410,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -440,7 +445,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -470,7 +480,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -500,7 +515,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -530,7 +550,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -560,7 +585,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -590,7 +620,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -620,7 +655,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -650,7 +690,12 @@
                   </tr>
                 </tbody>
               </table>
-              <a class="cloth-variants__link" href="#">Комби-паттерны</a>
+              <a class="cloth-variants__link" href="#">
+                Комби-паттерны
+                <svg>
+                  <use xlink:href="#spr-view"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -1057,13 +1102,13 @@
           <form class="popup-auth__form  js-form-login  js-show">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="password" placeholder="Пароль*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Войти</button>
           </form>
 
           <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="number" placeholder="ИНН*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Регистрация</button>
           </form>
 
           <p class="popup-auth__hint">Для юридических лиц*</p>
