--- a/source/product.html
+++ b/source/product.html
@@ -297,30 +297,6 @@
     </section>
   </header>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <main class="page__product  product-page">
     <div class="product-page__breadcrumbs  breadcrumbs">
       <div class="breadcrumbs__content  breadcrumbs__content--product">
@@ -1175,13 +1151,13 @@
         <form class="popup-auth__form  js-form-login  js-show">
           <input class="popup-auth__input" type="email" placeholder="Почта*">
           <input class="popup-auth__input" type="password" placeholder="Пароль*">
-          <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+          <button class="popup-auth__submit" type="submit">Войти</button>
         </form>
 
         <form class="popup-auth__form  js-form-signup">
           <input class="popup-auth__input" type="email" placeholder="Почта*">
           <input class="popup-auth__input" type="number" placeholder="ИНН*">
-          <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+          <button class="popup-auth__submit" type="submit">Регистрация</button>
         </form>
 
         <p class="popup-auth__hint">Для юридических лиц*</p>
