--- a/source/wholesale-clients.html
+++ b/source/wholesale-clients.html
@@ -72,7 +72,7 @@
               </a>
             </li>
           </ul>
-          <a class="main-info__order-callback  button" href="#">Обратный звонок</a>
+          <a class="main-info__order-callback button" href="#">Обратный звонок</a>
           <a class="main-info__sign-in  sign-in  button  button--inverted" href="#">Войти | Регистрация</a>
         </div>
       </section>
@@ -689,13 +689,13 @@
           <form class="popup-auth__form  js-form-login  js-show">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="password" placeholder="Пароль*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Войти</button>
           </form>
 
           <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="number" placeholder="ИНН*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Регистрация</button>
           </form>
 
           <p class="popup-auth__hint">Для юридических лиц*</p>
