--- a/source/services.html
+++ b/source/services.html
@@ -301,27 +301,27 @@
           <ul class="services__list">
             <li class="services__item">
               <h3 class="services__item-name">Название услуги</h3>
-              <a class="services__item-link" href="#">Заказать</a>
+              <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
               <h3 class="services__item-name">Название услуги</h3>
-              <a class="services__item-link" href="#">Заказать</a>
+              <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
               <h3 class="services__item-name">Название услуги</h3>
-              <a class="services__item-link" href="#">Заказать</a>
+              <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
               <h3 class="services__item-name">Название услуги</h3>
-              <a class="services__item-link" href="#">Заказать</a>
+              <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
               <h3 class="services__item-name">Название услуги</h3>
-              <a class="services__item-link" href="#">Заказать</a>
+              <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
               <h3 class="services__item-name">Название услуги</h3>
-              <a class="services__item-link" href="#">Заказать</a>
+              <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
           </ul>
         </div>
@@ -871,13 +871,13 @@
           <form class="popup-auth__form  js-form-login  js-show">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="password" placeholder="Пароль*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Войти</button>
           </form>
 
           <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="number" placeholder="ИНН*">
-            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+            <button class="popup-auth__submit" type="submit">Регистрация</button>
           </form>
 
           <p class="popup-auth__hint">Для юридических лиц*</p>
