--- a/source/product.html
+++ b/source/product.html
@@ -279,7 +279,7 @@
           </a>
         </li>
         <li class="popular-sections__item  popular-sections__item--desktop">
-          <a class="popular-sections__link" href="#">
+          <a class="popular-sections__link  sale-link" href="#">
             SALE
           </a>
         </li>
