--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
       </style>
     </noscript>
   </head>
-  <body class="page">
+  <body class="page  main-page">
     <div style="display: none">
       <include src="build/img/svg/sprite.svg"></include>
     </div>
@@ -283,7 +283,7 @@
             </a>
           </li>
           <li class="popular-sections__item  popular-sections__item--desktop">
-            <a class="popular-sections__link" href="#">
+            <a class="popular-sections__link  sale-link" href="#">
               SALE
             </a>
           </li>
@@ -648,7 +648,7 @@
               </div>
             </li>
 
-            <li class="popular-products__item  popular-product  mobile-hidden">
+            <li class="popular-products__item  popular-product">
               <div class="popular-product__image">
                 <p class="popular-product__sticker  popular-product__sticker--new">Новинка</p>
                 <p class="popular-product__sticker  popular-product__sticker--sale">Sale</p>
@@ -694,7 +694,7 @@
               </div>
             </li>
 
-            <li class="popular-products__item  popular-product  mobile-hidden">
+            <li class="popular-products__item  popular-product">
               <div class="popular-product__image">
                 <p class="popular-product__sticker  popular-product__sticker--new">Новинка</p>
                 <p class="popular-product__sticker  popular-product__sticker--sale">Sale</p>
@@ -740,7 +740,7 @@
               </div>
             </li>
 
-            <li class="popular-products__item  popular-product  mobile-hidden">
+            <li class="popular-products__item  popular-product">
               <div class="popular-product__image">
                 <p class="popular-product__sticker  popular-product__sticker--new">Новинка</p>
                 <p class="popular-product__sticker  popular-product__sticker--sale">Sale</p>
